[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pytherparse"
version = "0.1.1"
description = "Python interface to etherparse (Rust-based packet parser)"
authors = [{name = "Yavuz Elcil"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

[tool.maturin]
module-name = "pytherparse.pytherparse_native"
features = ["pyo3/extension-module"]